--- a/Moviesv2.ipynb
+++ b/Moviesv2.ipynb
@@ -6,7 +6,9 @@
     "colab": {
       "name": "Moviesv2.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOLrg9wHlyNXl5YyA2P7/Jm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -17,6 +19,25 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/NapoliD/Solucion_Kueski-/blob/main/Moviesv2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x1AxDNRt_zLf"
+      },
+      "source": [
+        "https://www.kaggle.com/grouplens/movielens-20m-dataset"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
